# pose-hg-train

./: main.cpp
src/: Diagram.dia  ref.lua
src/c++_train/: CMakeLists.txt  caffe.cpp
src/prototxt/: all.prototxt  cnv1.prototxt  cnv1_.prototxt  hg.prototxt  hg1.prototxt  inp.prototxt  inter1.prototxt  layers.csv  layers.txt  lin_loop1.prototxt  ll_loop1_.prototxt  loadcaffe.lua  loop1.prototxt  loop2.prototxt  pool.prototxt  r1.prototxt  r4.prototxt  r5.prototxt  residual.prototxt  residual_loop1.prototxt  structure.lua  tmp.prototxt  tmpOut_loop1.prototxt  tmpOut_loop1_.prototxt
src/prototxt/hg/: low1_1.prototxt  low1_2.prototxt  low1_3.prototxt  low1_4.prototxt  low1_pooling_.prototxt  low2_1.prototxt  low2_2.prototxt  low2_3.prototxt  low2_4.prototxt  low2_5.prototxt  low3_1.prototxt  low3_2.prototxt  low3_3.prototxt  low3_4.prototxt  up1_1.prototxt  up1_2.prototxt  up1_3.prototxt  up1_4.prototxt  up2_.prototxt
